--- a/src/main/resources/templates/mailTemplate.html
+++ b/src/main/resources/templates/mailTemplate.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<table width="100%" cellpadding="0" cellspacing="0" bgcolor="0095cc">
+<table width="100%" cellpadding="0" cellspacing="0" bgcolor="#57bc14">
     <tr>
         <td height="50" align="center"><p th:text="${header}">header</p></td>
     </tr>
@@ -21,7 +21,7 @@
         <td height="100" align="center"><h1 th:text="${title}">title</h1></td>
     </tr>
     <tr bgcolor="ffffff">
-        <td height="100" align="center"><h3 th:text="${description}">description</h3></td>
+        <td height="300" align="center"><h3 th:text="${description}">description</h3></td>
     </tr>
     <tr>
         <td height="50" align="center"><p>In Open Space no one can hear your scream.</p></td>
