--- a/src/main/resources/static/css/Admin.css
+++ b/src/main/resources/static/css/Admin.css
@@ -1,10 +1,9 @@
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Eras Medium ITC", serif;
     font-size: 18px;
     background-image: url('../img/background.jpg');
 }
-
 
 button:hover {
     opacity: 0.8;
@@ -19,19 +18,18 @@ button:hover {
     border-radius: 20px 15px;
     background-color: #f9f9f9;
     opacity: 0.98;
-    width: 800px;
+    width: 750px;
     height: 125px;
 }
 
 h1 {
-    font-size: 75px;
+    font-size: 65px;
     font-weight: bolder;
     text-align: center;
     font-family: "Eras Medium ITC", serif;
 }
 
 .container {
-    padding: 16px;
     margin-top: 3%;
     margin-right: auto;
     margin-left: auto;
@@ -41,7 +39,7 @@ h1 {
     background-color: #f9f9f9;
     opacity: 0.98;
     width: 800px;
-    height: 200px;
+    height: 150px;
 }
 
 a {
@@ -63,12 +61,10 @@ a:hover {
 }
 
 #main_um li a {
-    background-color: transparent;
-    height: 30px;
+    height: 120px;
     display: inline-block;
     float: left;
-    margin-top: 20px;
-    padding: 0px 25px;
+    margin: 25px 40px 3px 40px;
 }
 
 #main_um img:hover {
@@ -78,4 +74,101 @@ a:hover {
 label {
     margin-left: 15px;
     font-family: "Eras Medium ITC", serif;
+}
+
+/*//////////////////*/
+
+.second_floor {
+    margin-top: 115px;
+    display: none;
+    position: absolute;
+    /* background-color: #53C4DA;*/
+    background-color: #6F7B8C;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.8);
+    padding: 5px 5px;
+    z-index: 1;
+    overflow: auto;
+}
+
+#main_um li:hover .second_floor {
+    display: block;
+    width: 480px;
+    height: 435px;
+    border-radius: 15px 15px;
+}
+
+#main_um li:hover #ban {
+    display: block;
+    width: 200px;
+    height: 500px;
+    border-radius: 15px 15px;
+}
+
+.second_floor li {
+    margin-bottom: 25px;
+
+}
+
+/*///////////////////////////////////////*/
+.animate {
+    -webkit-animation: animatezoom 1s;
+    animation: animatezoom 1s;
+    animation-duration: 1s;
+
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+/*/////////////////////////////*/
+#banList {
+    padding: 2px;
+    line-height:2px;
+}
+
+#banList button{
+    background-color: crimson;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    width: 150px;
+    margin-top: 15px;
+    margin-left: 7px;
+    border-radius: 4px;
+    outline: none;
+
+}
+#banList button:hover {
+    opacity: 0.8;
+}
+/*adding new restaurant*/
+input[type=text] {
+    width: 460px;
+    padding: 12px 20px;
+    margin: 5px 0px;
+    display: inline-block;
+    border: 2px solid #4CAF50;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    width: 90px;
+    margin-left: 180px;
+    margin-top: 15px;
+    border-radius: 4px;
+    outline: none;
+
 }
