--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -12,6 +12,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
+            <div id="logCon"><img th:src="@{/img/logoCF.png}" alt="Logo" id="logo"/></div>
             <form th:action="@{/login}" method="post">
                 <div class="imgcontainer">
                     <img th:src="@{/img/avatar.png}" alt="Avatar" class="avatar" src="../static/img/avatar.png" />
