--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -12,6 +12,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
+            <div id="logCon"><img th:src="@{/img/logoCF.png}" alt="Logo" id="logo"/></div>
             <form autocomplete="off" action="#" th:action="@{/signup}" th:object="${user}" method="post" class="m-t" role="form" data-toggle="validator">
                 <div class="container">
                     <h1>Sign Up</h1>
