--- a/src/main/resources/templates/AdminPage.html
+++ b/src/main/resources/templates/AdminPage.html
@@ -20,22 +20,20 @@
                         <li><a href="#"><img th:src="@{/img/add.png}" title="add new offer"/> </a>
                             <ul class="second_floor animate">
                                 <li>
-                                    <form action="...">
+                                    <form autocomplete="off" action="#" th:action="@{/adminPa}" th:object="${offer}" method="post">
                                         <label><b>Restaurant: </b></label>
                                         <br/>
-                                        <input type="text" placeholder="Restaurant" name="restaurant"
-                                               required="required"/>
+                                        <input type="text" th:field="*{restaurant}" placeholder="Restaurant" name="restaurant" required="required"/>
                                         <br/>
                                         <br/>
                                         <label><b>Description: </b></label>
                                         <br/>
-                                        <input type="text" placeholder="Say something about that restaurant" name="psw"
-                                               required="required"/>
+                                        <input type="text" th:field="*{description}" placeholder="Say something about that restaurant" name="des" required="required"/>
                                         <br/>
                                         <br/>
                                         <label><b>URL: </b></label>
                                         <br/>
-                                        <input type="text" placeholder="url" name="psw" required="required"/>
+                                        <input type="text" th:field="*{URL}" placeholder="url" name="url" required="required"/>
                                         <div class="button">
                                             <button type="submit" class="addNew" id="button2">Add</button>
                                         </div>
@@ -44,34 +42,14 @@
                             </ul>
                         </li>
                         <li><a href="#"><img th:src="@{/img/list.png}" title="list"/></a></li>
-                        <li><a href="#"><img  th:src="@{/img/money1.png}" title="money"/></a>
-                        </li>
+                        <li><a href="#"><img th:src="@{/img/money1.png}" title="money"/></a></li>
                         <li><a href="#"><img th:src="@{/img/ban.png}" title="Business news"/></a>
                             <ul class="second_floor animate" id="ban">
                                 <li>
-                                    <ul id="banList">
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Matilde Guttierrez</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Lucilla Bozell</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Andres Luckett</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Louise Danielson</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Elinor Ritenour</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Bong Bublitzv</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Magali Goree</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Solange Rosamond</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Tynisha Halsted</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Pablo Parsonv</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Julian Lokken</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Beulah Willems</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Lena Sedlak</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Mariah Devitt</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Anglea Canon</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Elsa Wilburn</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Mariam Poisson</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Orville Lauderdale</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Shanita Rieck</li>
-                                        <li><input type="radio" class="order" name="radio" title="ban"/> Bridgette Bornstein</li>
-                                        <li><button>BAN</button></li>
+                                    <ul id="banList" th:each="users:${users}">
+                                        <li><input type="radio" class="order" name="radio" title="ban" th:text="' '+${users.firstName}+' '+${users.lastName}"/></li>
                                     </ul>
+                                    <button id="banButton" type="submit">DELETE</button>
                                 </li>
                             </ul>
                         </li>
