--- a/src/main/resources/templates/AdminPage.html
+++ b/src/main/resources/templates/AdminPage.html
@@ -55,6 +55,7 @@
                         </li>
                     </ul>
                 </div>
+                <div id="backButt"><a href="/welcome"><img th:src="@{/img/back.png}"/></a></div>
             </div>
         </div>
     </div>
