--- a/src/main/resources/static/css/FirstPage.css
+++ b/src/main/resources/static/css/FirstPage.css
@@ -44,10 +44,10 @@ button:hover {
 }
 
 #header {
-    font-family: "Fira Code",serif  ;
+    font-family: "Eras Medium ITC", serif;
     font-size: 30px;
     text-align: center;
-    color: #af194a;
+    color: #4CAF50;
     margin-top: 0;
 }
 
