--- a/src/main/resources/static/css/Admin.css
+++ b/src/main/resources/static/css/Admin.css
@@ -82,7 +82,7 @@ label {
 /*//////////////////*/
 
 .second_floor {
-    margin-top: 155px;
+    margin-top: 145px;
     display: none;
     position: absolute;
     background-color: #6F7B8C;
@@ -180,7 +180,22 @@ button {
     outline: none;
 }
 
-#backButt{
-    margin-top: 465px;
+#backButt {
+    margin-top: 160px;
     float: left;
+}
+
+#logoCont {
+    position: center;
+    margin-top: 160px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+}
+
+#logo {
+    position: static;
+    width: 600px;
+    opacity: 0.5;
+    transform: rotate(-25deg);
 }
