--- a/src/main/resources/templates/AdminPage.html
+++ b/src/main/resources/templates/AdminPage.html
@@ -43,7 +43,7 @@
                         </li>
                         <li><a href="#"><img th:src="@{/img/list.png}" title="list"/></a></li>
                         <li><a href="#"><img th:src="@{/img/money1.png}" title="money"/></a></li>
-                        <li><a href="#"><img th:src="@{/img/ban.png}" title="Business news"/></a>
+                        <li><a href="#"><img th:src="@{/img/ban.png}" title="Ban"/></a>
                             <ul class="second_floor animate" id="ban">
                                 <li>
                                     <ul id="banList" th:each="users:${users}">
