--- a/src/main/resources/static/css/FirstPage.css
+++ b/src/main/resources/static/css/FirstPage.css
@@ -120,7 +120,6 @@ input[type=text] {
 }
 
 button {
-
     outline: none;
     background-color: #4CAF50;
 }
@@ -219,7 +218,100 @@ input[type=radio] {
     float: right;
 }
 
-#admin{
+#admin {
     margin-top: 305px;
     float: left;
+}
+
+#upper_menu {
+    margin-right: 450px;
+    float: right;
+    display: inline-table;
+}
+
+#main_um li {
+    list-style-type: none;
+    display: inline-block;
+}
+
+
+.second_floor {
+    margin-right: 80px;
+    max-width: 400px;
+    width: auto;
+    height: auto;
+    max-height: 500px;
+    border-radius: 15px 15px;
+}
+
+#main_um li:hover #ban {
+    display: block;
+
+    border-radius: 15px 15px;
+}
+
+/*//////////////////*/
+
+.second_floor {
+    margin-top: 25px;
+    background-color: #6F7B8C;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.8);
+    padding: 5px 5px;
+    z-index: 1;
+    overflow: auto;
+}
+
+.second_floor li {
+    margin-bottom: 25px;
+}
+
+/*///////////////////////////////////////*/
+.animate {
+    -webkit-animation: animatezoom 1s;
+    animation: animatezoom 1s;
+    animation-duration: 1s;
+
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+/*/////////////////////////////*/
+.mainTable{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+
+    max-width: 520px;
+    width: auto;
+    height: auto;
+    max-height: 200px;
+
+    background-color: #6F7B8C;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.8);
+    padding: 5px 5px;
+    z-index: 1;
+    overflow: auto;
+}
+table{width: 100%}
+th {
+    max-width: 183px;
+    border: 1px solid white;
+    padding-left: 2px;
+    color: white;
+}
+
+td {
+    word-wrap: break-word;
+    max-width: 183px;
+    height: 30px;
+    padding-left: 8px;
+    border-bottom: 1px solid white;
+    color: white;
 }
