--- a/src/main/resources/static/css/FirstPage.css
+++ b/src/main/resources/static/css/FirstPage.css
@@ -80,20 +80,6 @@ button:hover {
     box-shadow: 0px 8px 12px 0px rgb(169, 159, 162);
 }
 
-.restaurantWindow1 {
-    text-align: center;
-    padding: 16px;
-    margin-left: 5px;
-    border: 3px solid #8CC3EC;
-    border-radius: 20px 15px;
-
-    background-image: url("../img/do.png");
-    opacity: 0.98;
-    width: 370px;
-    height: 350px;
-    display: inline-block;
-    box-shadow: 0px 8px 12px 0px rgb(169, 159, 162);
-}
 
 #orderBtn {
     position: relative;
@@ -187,13 +173,15 @@ button:hover {
     }
 }
 
-p {
-    margin-top: 220px
+.restaurantWindow p {
+    margin-top: 10px;
 }
 
-a {
+.restaurantWindow #menu {
+    font-weight: bold;
+    margin-top: auto;
     cursor: pointer;
-    color: #4CAF50;
+    color: #428542;
 }
 
 a:hover {
