--- a/src/main/resources/templates/FirstPage.html
+++ b/src/main/resources/templates/FirstPage.html
@@ -33,12 +33,12 @@
                             <th>Order</th>
                             <th>Price</th>
                         </tr>
-                        <div th:each="response12:${activeResponses.values()}">
-                            <div th:each="response:${response12}">
+                        <div th:each="key : ${keys}">
+                            <div th:each="val : ${activeResponses.get(key)}">
                             <tr>
-                                <td th:text="${response.user.firstName}+' '+${response.user.lastName}">q</td>
-                                <td th:text="${response.yourOrder}">q</td>
-                                <td th:text="${response.price}">q</td>
+                                <td th:text="${val.user.firstName}+' '+${val.user.lastName}">q</td>
+                                <td th:text="${val.yourOrder}">q</td>
+                                <td th:text="${val.price}">q</td>
                             </tr>
                             </div>
                         </div>
@@ -46,14 +46,14 @@
                 </div>
                 <div id="id01" class="modal">
                     <div class="container1 animate">
-                        <form autocomplete="off" action="#" th:action="@{/welcome}" th:object="${userR}" method="post"
+                        <form autocomplete="off" action="#" th:action="@{/addUserResponse}" th:object="${userR}" method="post"
                               class="m-t" role="form" data-toggle="validator">
                             <label><b>Order: </b></label>
                             <br/>
-                            <input type="radio" id="radio1" class="order" name="radio"/>
-                            <label for="radio1" class="radioLabel">RESTAURANT 1</label>
-                            <input type="radio" id="radio2" class="order" name="radio"/>
-                            <label for="radio2" class="radioLabel">RESTAURANT 2</label>
+                            <div th:each="offer : ${activeOffers}">
+                            <input type="radio" id="radio1" class="order" name="offerID"
+                                   th:value="${offer.getId()}" th:text="${offer.getRestaurant()}"/>
+                            </div>
                             <br/>
                             <input type="text" th:field="*{yourOrder}" placeholder="Your order" name="order"/>
                             <br/>
