--- a/src/main/resources/static/css/LoginPage.css
+++ b/src/main/resources/static/css/LoginPage.css
@@ -52,12 +52,12 @@ form {
     margin-right: auto;
     margin-left: auto;
     position: center;
-    border: 3px solid  #af194a;
+    border: 3px solid #4CAF50;
     border-radius: 20px 15px;
     background-color: #f9f9f9;
     opacity: 0.98;
     width: 500px;
-    height: 630px;
+    height: 700px;
 }
 
 #abc {
@@ -90,4 +90,7 @@ form {
     position: center;
     opacity: 0.98;
     width: 500px;
+}
+.alert{
+    width: 460px;
 }
