Added admin user and responses management options

--- a/src/main/resources/templates/AdminPage.html
+++ b/src/main/resources/templates/AdminPage.html
@@ -41,16 +41,54 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="#"><img th:src="@{/img/list.png}" title="list"/></a></li>
+                        <li><a href="#"><img th:src="@{/img/list.png}" title="list"/></a>
+                            <ul class="second_floor animate">
+                                    <div class="mainTable">
+                                        <table>
+                                            <tr>
+                                                <th>Name</th>
+                                                <th>Order</th>
+                                                <th>Price</th>
+                                                <th>Restaurant</th>
+                                            </tr>
+                                            <div th:each="key : ${keys}">
+                                                <div th:each="val : ${activeResponses.get(key)}">
+                                                    <tr>
+                                                        <td th:text="${val.user.firstName}+' '+${val.user.lastName}">q</td>
+                                                        <td th:text="${val.yourOrder}">q</td>
+                                                        <td th:text="${val.price}">q</td>
+                                                        <td th:text="${key}">q</td>
+                                                        <td class="deleteB">
+                                                            <form th:action="@{/deleteUserResponse/{id}(id=${val.id})}" th:object="${activeResponses}" method="post">
+                                                                <input type="hidden" th:field="${activeResponses}"/>
+                                                                <button class="deleteButton" type="submit" value="Delete" onClick="return confirm('Confirm delete?')"/>
+                                                            </form>
+                                                        </td>
+                                                    </tr>
+                                                </div>
+                                            </div>
+                                        </table>
+                                    </div>
+                            </ul>
+                        </li>
                         <li><a href="#"><img th:src="@{/img/money1.png}" title="money"/></a></li>
                         <li><a href="#"><img th:src="@{/img/ban.png}" title="Ban"/></a>
                             <ul class="second_floor animate" id="ban">
-                                <li>
-                                    <ul id="banList" th:each="users:${users}">
-                                        <li><input type="radio" class="order" name="radio" title="ban" th:text="' '+${users.firstName}+' '+${users.lastName}"/></li>
-                                    </ul>
-                                    <button id="banButton" type="submit">DELETE</button>
-                                </li>
+                                <div class="mainTable">
+                                    <table>
+                                            <div th:each="user : ${users}">
+                                                <tr>
+                                                    <td th:text="${user.firstName}+' '+${user.lastName}"></td>
+                                                    <td class="deleteB">
+                                                        <form th:action="@{/deleteUser/{id}(id=${user.id})}" th:object="${users}" method="post">
+                                                            <input type="hidden" th:field="${users}"/>
+                                                            <button class="deleteButton" type="submit" value="Delete" onClick="return confirm('Confirm delete?')"/>
+                                                        </form>
+                                                    </td>
+                                                </tr>
+                                            </div>
+                                    </table>
+                                </div>
                             </ul>
                         </li>
                     </ul>
