--- a/src/main/resources/static/css/Admin.css
+++ b/src/main/resources/static/css/Admin.css
@@ -194,3 +194,55 @@ button {
     opacity: 0.5;
     transform: rotate(-25deg);
 }
+
+
+.mainTable{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+
+    max-width: 520px;
+    width: auto;
+    height: auto;
+    max-height: 200px;
+
+    background-color: #6F7B8C;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.8);
+    padding: 5px 5px;
+    z-index: 1;
+    overflow: auto;
+}
+table{width: 100%}
+th {
+    max-width: 183px;
+    border: 1px solid white;
+    padding-left: 2px;
+    color: white;
+}
+
+td {
+    word-wrap: break-word;
+    max-width: 183px;
+    height: 30px;
+    padding-left: 8px;
+    border-bottom: 1px solid white;
+    color: white;
+}
+
+.deleteButton{
+    background: #6F7B8C url("../img/deleteButton.png");
+    width: 15px;
+    height: 29px;
+    border: none;
+    padding-right: 13px;
+    margin-left: 5px;
+    margin-bottom: 15px;
+}
+
+.deleteB{
+    word-wrap: normal;
+    max-width: 1px;
+    height: 1px;
+    padding-left: 0px;
+    border: none;
+}
